<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityFragment">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:src="@drawable/ic_share"
        app:tint="@color/purple_200"
        app:backgroundTint="@color/fabSave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/tvActivityTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/activity_title"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/ivActivityType"
                app:layout_constraintTop_toTopOf="@+id/ivActivityType" />

            <TextView
                android:id="@+id/tvActivityStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="01-01-1970"
                app:layout_constraintStart_toStartOf="@+id/tvActivityTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvActivityTitle" />

            <TextView
                android:id="@+id/tvActivityStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="00:00"
                app:layout_constraintStart_toEndOf="@+id/tvActivityStartDate"
                app:layout_constraintTop_toTopOf="@+id/tvActivityStartDate" />

            <!-- <ImageView -->
            <!--     android:id="@+id/ivActivityType" -->
            <!--     android:layout_width="32dp" -->
            <!--     android:layout_height="48dp" -->
            <!--     android:alpha="0.75" -->
            <!--     android:src="@drawable/ic_activity_running" -->
            <!--     app:layout_constraintStart_toStartOf="@+id/tvActivityTitle" -->
            <!--     app:layout_constraintTop_toBottomOf="@+id/tvActivityTitle" /> -->

            <View
                android:id="@+id/SplitLine_hor1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:alpha="0.6"
                android:background="@color/primary_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvActivityTitle"
                app:layout_constraintTop_toBottomOf="@+id/ivActivityType" />

            <!-- <com.google.android.material.button.MaterialButton -->
            <!--     android:id="@+id/btnShare" -->
            <!--     android:layout_width="48dp" -->
            <!--     android:layout_height="48dp" -->
            <!--     android:layout_marginTop="8dp" -->
            <!--     android:layout_marginEnd="16dp" -->
            <!--     android:background="@drawable/circle" -->
            <!--     android:backgroundTint="@color/purple_200" -->
            <!--     android:clickable="true" -->
            <!--     android:padding="12dp" -->
            <!--     android:src="@drawable/ic_share" -->
            <!--     app:backgroundTint="@color/purple_200" -->
            <!--     app:icon="@drawable/ic_share" -->
            <!--     app:iconTint="@color/white" -->
            <!--     app:layout_constraintEnd_toEndOf="parent" -->
            <!--     app:layout_constraintTop_toTopOf="parent" /> -->

            <ImageView
                android:id="@+id/ivActivityType"
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:alpha="0.8"
                android:background="@drawable/empty_circle"
                android:padding="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_activity_running"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/purple_200" />

            <View
                android:id="@+id/test"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:background="#00000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/SplitLine_hor1" />

            <TextView
                android:id="@+id/tvActivityStartTime2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Start Time"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tvActivityDuration"
                app:layout_constraintTop_toBottomOf="@+id/tvDurationValue" />

            <TextView
                android:id="@+id/tvActivityDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:text="@string/duration"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/ivActivityType"
                app:layout_constraintTop_toBottomOf="@+id/cvMap" />

            <TextView
                android:id="@+id/tvDurationValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:12:34"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/tvActivityDuration"
                app:layout_constraintTop_toBottomOf="@+id/tvActivityDuration" />

            <TextView
                android:id="@+id/tvActivityDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="161dp"
                android:text="@string/distance"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tvActivityDuration"
                app:layout_constraintTop_toBottomOf="@+id/tvDurationValue" />

            <TextView
                android:id="@+id/tvActivityDistanceValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7.65"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/tvActivityDistance"
                app:layout_constraintTop_toBottomOf="@+id/tvActivityDistance" />

            <TextView
                android:id="@+id/tvSteps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/steps"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tvActivityDuration"
                app:layout_constraintTop_toBottomOf="@+id/tvActivityDistanceValue" />

            <TextView
                android:id="@+id/tvStepsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7260"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/tvSteps"
                app:layout_constraintTop_toBottomOf="@+id/tvSteps" />

            <TextView
                android:id="@+id/tvCaloriesBurned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/calories_burned"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tvActivityDuration"
                app:layout_constraintTop_toBottomOf="@+id/tvStepsValue" />

            <TextView
                android:id="@+id/tvCaloriesBurnedValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="600"
                app:layout_constraintStart_toStartOf="@+id/tvCaloriesBurned"
                app:layout_constraintTop_toBottomOf="@+id/tvCaloriesBurned" />

            <!-- <TextView -->
            <!--     android:id="@+id/tvMap" -->
            <!--     android:layout_width="wrap_content" -->
            <!--     android:layout_height="wrap_content" -->
            <!--     android:layout_marginTop="16dp" -->
            <!--     android:text="Map" -->
            <!--     android:textSize="18sp" -->
            <!--     android:textStyle="bold" -->
            <!--     app:layout_constraintStart_toStartOf="@+id/tvActivityDuration" -->
            <!--     app:layout_constraintTop_toBottomOf="@+id/tvCaloriesBurnedValue" /> -->


            <androidx.cardview.widget.CardView
                android:id="@+id/cvMap"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="@+id/SplitLine_hor1"
                app:layout_constraintStart_toStartOf="@+id/SplitLine_hor1"
                app:layout_constraintTop_toBottomOf="@+id/SplitLine_hor1">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/map"
                    app:layout_constraintStart_toStartOf="@+id/tvMap"
                    app:layout_constraintTop_toBottomOf="@+id/tvMap" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvDistanceUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="km"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/tvActivityDistanceValue"
                app:layout_constraintTop_toTopOf="@+id/tvActivityDistanceValue" />

            <TextView
                android:id="@+id/tvCaloriesBurnedUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="kcal"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/tvCaloriesBurnedValue"
                app:layout_constraintTop_toTopOf="@+id/tvCaloriesBurnedValue" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00"
                app:layout_constraintStart_toStartOf="@+id/tvActivityStartTime2"
                app:layout_constraintTop_toBottomOf="@+id/tvActivityStartTime2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>